# chai.im

./: .Procfile.swp  .env.example  .eslintcache  .gitignore  .package.json.swp  .web.js.swp  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.server  IMPLEMENTATION_PLAN.md  LICENSE  README  README.md  SECURITY.md  VISION.md  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json  web.js
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  next.config.js  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
apps/web/public/: manifest.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(chat)/: layout.tsx  page.tsx
apps/web/src/app/(chat)/[conversationId]/: page.tsx
apps/web/src/app/(chat)/new/: page.tsx
apps/web/src/app/auth/login/: page.tsx
apps/web/src/app/auth/register/: page.tsx
apps/web/src/app/chat/: layout.tsx  page.tsx
apps/web/src/app/chat/[conversationId]/: page.tsx
apps/web/src/app/chat/new/: page.tsx
apps/web/src/components/: CreateGroupModal.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  GroupMembersModal.tsx  Loading.tsx  OnlineStatus.tsx  ReactionPicker.tsx  ReadReceipt.tsx  Toast.tsx  TypingIndicator.tsx
apps/web/src/hooks/: useEmojiAutocomplete.tsx  useKeyboardShortcuts.ts
apps/web/src/lib/: config.ts  logger.ts
apps/web/src/lib/api/: auth.ts  password-auth.test.ts  password-auth.ts  users.ts
apps/web/src/lib/crypto/: keyLocker.test.ts  keyLocker.ts  wasm.ts
apps/web/src/lib/emoji/: customEmoji.ts  emojiData.ts  index.ts
apps/web/src/lib/ws/: client.ts
apps/web/src/store/: authStore.test.ts  authStore.ts  chatStore.test.ts  chatStore.ts  connectionStore.ts  groupStore.ts  index.ts  toastStore.ts
apps/web/src/test/: setup.ts
apps/web/src/wasm/: chai_crypto.ts
apps/web/wasm/: chai_crypto.d.ts  chai_crypto.js  chai_crypto_bg.wasm  chai_crypto_bg.wasm.d.ts  package.json
chai/views/: .footer.jade.swp  footer.jade  index.jade
crates/chai-cli/: Cargo.toml
crates/chai-cli/src/: config.rs  error.rs  main.rs
crates/chai-cli/src/network/: client.rs  mod.rs
crates/chai-cli/src/tui/: app.rs  mod.rs  ui.rs  widgets.rs
crates/chai-common/: Cargo.toml
crates/chai-common/src/: error.rs  lib.rs  types.rs
crates/chai-crypto/: Cargo.toml
crates/chai-crypto/src/: cipher.rs  error.rs  keys.rs  lib.rs  ratchet.rs  session.rs  wasm.rs  x3dh.rs
crates/chai-protocol/: Cargo.toml
crates/chai-protocol/src/: lib.rs  messages.rs  wire.rs
crates/chai-server/: Cargo.toml  Secrets.toml.example  Shuttle.toml
crates/chai-server/migrations/: 001_initial.sql  002_groups.sql
crates/chai-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/chai-server/src/db/: credentials.rs  groups.rs  messages.rs  mod.rs  prekeys.rs  sessions.rs  users.rs
crates/chai-server/src/handlers/: auth.rs  groups.rs  health.rs  mod.rs  password_auth.rs  prekeys.rs  users.rs
crates/chai-server/src/ws/: connection.rs  handler.rs  message.rs  mod.rs
crates/chai-server/tests/: integration_tests.rs
crates/chai-server/tests/common/: mod.rs
src/: App.js
