[workspace]
resolver = "2"
members = [
    "crates/chai-server",
    "crates/chai-crypto",
    "crates/chai-protocol",
    "crates/chai-cli",
    "crates/chai-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/chai-im/chai.im"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.12"

# Crypto
curve25519-dalek = { version = "4.1", features = ["serde"] }
x25519-dalek = { version = "2.0", features = ["serde", "static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rand_core = "0.6"

# Authentication
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
dotenvy = "0.15"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"
base64 = "0.22"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# TUI
ratatui = "0.25"
crossterm = "0.27"

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Syntax highlighting
syntect = "5.1"

# Internal crates
chai-crypto = { path = "crates/chai-crypto" }
chai-protocol = { path = "crates/chai-protocol" }
chai-common = { path = "crates/chai-common" }
