[package]
name = "chai-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chai-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Database
sqlx = { workspace = true }

# Authentication
webauthn-rs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
uuid = { workspace = true }
time = { workspace = true }
dotenvy = { workspace = true }

# Internal crates
chai-crypto = { workspace = true }
chai-protocol = { workspace = true }
chai-common = { workspace = true }
