[package]
name = "chai-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "chai_server"
path = "src/lib.rs"

[[bin]]
name = "chai-server"
path = "src/main.rs"

[features]
default = []
shuttle = ["shuttle-runtime", "shuttle-axum", "shuttle-shared-db"]

[dependencies]
# Web framework
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Database
sqlx = { workspace = true }

# Authentication
webauthn-rs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utils
uuid = { workspace = true }
time = { workspace = true }
dotenvy = { workspace = true }

# Crypto (for session tokens and password hashing)
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
argon2 = "0.5"

# Internal crates
chai-crypto = { workspace = true }
chai-protocol = { workspace = true }
chai-common = { workspace = true }

# Shuttle (optional) - pinned to 0.49 for axum 0.7 compatibility
shuttle-runtime = { version = "0.49", optional = true }
shuttle-axum = { version = "0.49", optional = true }
shuttle-shared-db = { version = "0.49", features = ["postgres", "sqlx"], optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { workspace = true }
serial_test = "3.0"
